<resources>
    <string name="app_name">RestMake</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">The password must be at least 6 characters long</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="action_register">Create account</string>
    <string name="prompt_name">Name</string>
    <string name="switch_to_register">No account yet\? Create one</string>
    <string name="switch_to_login">Already a member? Sign in</string>
    <string name="account_verify">Your account has been created. To continue verify your email address.</string>

    <string name="item_title_hint">Title</string>
    <string name="item_description_hint">Description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
